--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <head>
   <!-- This will show up on the tab in the browser -->
-  <title>My Portfolio</title>
+  <title>Ryan's Site</title>
 
   <!-- This links css file to the html -->
-  <link rel="stylesheet" type="text/css" href="index.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
 <body>
-  <!-- This is the start of the about section -->
-  <div class="about">
-    <h1>About</h1>
-    <p>Welcome to my portfolio</p>
+  <div class="row h-100 align-items-center">
+    <div class="col-md">
+      <div class="text-center" style="font-family: Snell Roundhand; font-size: 48;">The</div>
+    </div>
   </div>
 
-  <!-- This is the start of the projects section -->
-  <div class="projects">
-    <h1>Projects</h1>
-  </div>
+  <!-- include javascript packages -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
