--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
   <!-- This links css file to the html -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <!-- snell roundhand font -->
+  <link href="https://fonts.cdnfonts.com/css/snell-roundhand" rel="stylesheet">
 </head>
 
 <body>
